# docker-openai-oss

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.tmp/: design.md  requirements.md  tasks.md
scripts/: build.sh  download_model.sh  run.sh  start.sh  stop.sh  test_api.sh
